--- a/DestoPesto/DestoPesto/Views/SubmisionPopupPage.xaml
+++ b/DestoPesto/DestoPesto/Views/SubmisionPopupPage.xaml
@@ -30,10 +30,17 @@
                 <RowDefinition/>
                 <RowDefinition Height="60"/>
             </Grid.RowDefinitions>
-            <Label Text="Location"></Label>
+            <Label Text="{Binding Description}"></Label>
             <Grid Padding="10,20,10,20" Grid.Row="1">
 
-                <Image x:Name="backgroundImage" Source="https://asfameazure.blob.core.windows.net/destopesto/images/eb25c486-14cf-42f6-b300-0f8107c1df21.jpg" AbsoluteLayout.LayoutBounds="0,0,1,1"   AbsoluteLayout.LayoutFlags="All" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Aspect="AspectFill"/>
+                <Image  x:Name="backgroundImage" Source="{Binding SubmisionThumb}" AbsoluteLayout.LayoutBounds="0,0,1,1"   AbsoluteLayout.LayoutFlags="All" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Aspect="AspectFill">
+
+                    <Image.GestureRecognizers>
+                        <TapGestureRecognizer
+                Tapped="OnImageNameTapped"
+                NumberOfTapsRequired="1" />
+                    </Image.GestureRecognizers>
+                </Image>
             </Grid>
             <Grid Grid.Row="2">
                 <Grid.ColumnDefinitions>
@@ -41,7 +48,7 @@
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
                 <Grid >
-                    <hl:HyperlinkLabel x:Name="IsRepairedHyperlink"   Text="Φτιάχτηκε" ></hl:HyperlinkLabel>
+                    <Label  Text="{Binding Comments}" ></Label>
 
                 </Grid>
             </Grid>
