--- a/DestoPesto/DestoPesto/Views/SubmisionsListPageDetail.xaml
+++ b/DestoPesto/DestoPesto/Views/SubmisionsListPageDetail.xaml
@@ -32,12 +32,12 @@
                                         <Grid  Grid.Row="2" >
                                             <Image HeightRequest="330" x:Name="backgroundImage" Source="{Binding Path=photoUrl}" AbsoluteLayout.LayoutBounds="0,0,1,1"   AbsoluteLayout.LayoutFlags="All" />
                                         </Grid>
-                                        <Grid Grid.Row="3">
+                                        <Grid Grid.Row="3" >
 
                                             <Grid Grid.Row="1" Grid.Column="0" HeightRequest="40" HorizontalOptions="Fill" IsClippedToBounds="True" VerticalOptions="Center">
 
                                                 <!--  Button Control  -->
-                                                <Button BackgroundColor="#2196F3">
+                                                <Button BackgroundColor="#2196F3" Text="Φτιάχτηκε" Command="{Binding FixedCommand}">
                                                     <Button.Margin>
                                                         <OnPlatform x:TypeArguments="Thickness">
                                                             <On Platform="Android" Value="-4,-6,-4,-5" />
@@ -47,10 +47,10 @@
                                                 </Button>
 
                                                 <!--  Text Label  -->
-                                                <Label Margin="10,0,0,0" FontAttributes="Bold" FontSize="Small" HorizontalOptions="Start" HorizontalTextAlignment="Center" InputTransparent="True" Text="go next" TextColor="White" VerticalOptions="Center" VerticalTextAlignment="Center" />
+                                                <!--<Label Margin="10,0,0,0" FontAttributes="Bold" FontSize="Small" HorizontalOptions="Start" HorizontalTextAlignment="Center" InputTransparent="True" Text="go next" TextColor="White" VerticalOptions="Center" VerticalTextAlignment="Center" />-->
 
                                                 <!--  Icon Image  -->
-                                                <Image Margin="0,0,5,0" HeightRequest="30" InputTransparent="True" Source="https://asfameazure.blob.core.windows.net/destopesto/images/icons/icons_TrafficSign.png" AbsoluteLayout.LayoutBounds="0,0,1,1"   AbsoluteLayout.LayoutFlags="All" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Aspect="AspectFill" WidthRequest="30" />
+                                                
                                             </Grid>
 
 
