--- a/DestoPesto/DestoPesto/Views/SubmisionsListPageDetail.xaml
+++ b/DestoPesto/DestoPesto/Views/SubmisionsListPageDetail.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="DestoPesto.Views.SubmisionsListPageDetail"
              xmlns:controls="clr-namespace:DestoPesto.Controls"
+             xmlns:xct="clr-namespace:Xamarin.CommunityToolkit.UI.Views;assembly=Xamarin.CommunityToolkit"
              xmlns:hl="clr-namespace:Hyperlink"
              Title="Detail">
     <Grid>
@@ -12,6 +13,8 @@
 
                     <controls:RepeaterView.ItemTemplate>
                         <DataTemplate>
+
+
                             <Grid >
                                 <Frame Margin="10" CornerRadius="5"  BackgroundColor="Coral"
                                         HorizontalOptions="Fill" 
@@ -20,82 +23,98 @@
                                    IsClippedToBounds="True"
                                    Padding="0">
                                     <Grid Padding="15" BackgroundColor="WhiteSmoke">
-                                        <Grid.RowDefinitions>
-                                            <RowDefinition Height="30"/>
-                                            <RowDefinition Height="20"/>
-                                            <RowDefinition Height="*"/>
-                                            <RowDefinition Height="80"/>
-                                        </Grid.RowDefinitions>
-                                        <Label FontSize="Caption" Text="{Binding Path=CategoryName}"></Label>
-                                        <Label Grid.Row="1" FontSize="Subtitle" Text="{Binding Path=fullAddress}"></Label>
-
-                                        <Grid  Grid.Row="2" >
-                                            <Image HeightRequest="330" x:Name="backgroundImage" Source="{Binding Path=photoUrl}" AbsoluteLayout.LayoutBounds="0,0,1,1"   AbsoluteLayout.LayoutFlags="All" />
-                                        </Grid>
-                                        <Grid Grid.Row="3" >
-
-                                            <Grid Grid.Row="1" Grid.Column="0" HeightRequest="40" HorizontalOptions="Fill" IsClippedToBounds="True" VerticalOptions="Center">
-
-                                                <!--  Button Control  -->
-                                                <Button BackgroundColor="#2196F3" Text="Φτιάχτηκε" Command="{Binding FixedCommand}">
-                                                    <Button.Margin>
-                                                        <OnPlatform x:TypeArguments="Thickness">
-                                                            <On Platform="Android" Value="-4,-6,-4,-5" />
-                                                            <On Platform="iOS" Value="0" />
-                                                        </OnPlatform>
-                                                    </Button.Margin>
-                                                </Button>
-
-                                                <!--  Text Label  -->
-                                                <!--<Label Margin="10,0,0,0" FontAttributes="Bold" FontSize="Small" HorizontalOptions="Start" HorizontalTextAlignment="Center" InputTransparent="True" Text="go next" TextColor="White" VerticalOptions="Center" VerticalTextAlignment="Center" />-->
-
-                                                <!--  Icon Image  -->
-                                                
-                                            </Grid>
 
 
 
+                                        <xct:Expander>
+                                            <xct:Expander.Header>
+                                                <Grid >
+                                           
+                                                        <Grid Padding="15" BackgroundColor="WhiteSmoke">
+                                                            <Grid.RowDefinitions>
+                                                                <RowDefinition Height="30"/>
+                                                                <RowDefinition Height="20"/>
 
-                                            <!--<Grid >
+                                                            </Grid.RowDefinitions>
+                                                            <Label FontSize="Caption" Text="{Binding Path=CategoryName}"></Label>
+                                                            <Label Grid.Row="1" FontSize="Subtitle" Text="{Binding Path=fullAddress}"></Label>
+                                                        </Grid>
+                                                    
+                                                </Grid>
+                                            </xct:Expander.Header>
+                                            <xct:Expander.ContentTemplate>
+                                                <DataTemplate>
+
+                                                    <Grid>
+                                                        <Grid.RowDefinitions>
+                                                            
+                                                            <RowDefinition Height="*"/>
+                                                            <RowDefinition Height="80"/>
+                                                        </Grid.RowDefinitions>
+                                                     
+                                                        <Grid   >
+                                                            <Image HeightRequest="330" x:Name="backgroundImage" Source="{Binding Path=photoUrl}" AbsoluteLayout.LayoutBounds="0,0,1,1"   AbsoluteLayout.LayoutFlags="All" />
+                                                        </Grid>
+                                                        <Grid Grid.Row="1" >
+
+                                                            <Grid Grid.Row="1" Grid.Column="0" HeightRequest="40" HorizontalOptions="Fill" IsClippedToBounds="True" VerticalOptions="Center">
+
+                                                                <!--  Button Control  -->
+                                                                <Button BackgroundColor="#2196F3" Text="Φτιάχτηκε" Command="{Binding FixedCommand}">
+                                                                    <Button.Margin>
+                                                                        <OnPlatform x:TypeArguments="Thickness">
+                                                                            <On Platform="Android" Value="-4,-6,-4,-5" />
+                                                                            <On Platform="iOS" Value="0" />
+                                                                        </OnPlatform>
+                                                                    </Button.Margin>
+                                                                </Button>
+
+                                                                <!--  Text Label  -->
+                                                                <!--<Label Margin="10,0,0,0" FontAttributes="Bold" FontSize="Small" HorizontalOptions="Start" HorizontalTextAlignment="Center" InputTransparent="True" Text="go next" TextColor="White" VerticalOptions="Center" VerticalTextAlignment="Center" />-->
+
+                                                                <!--  Icon Image  -->
+
+                                                            </Grid>
+
+
+
+
+                                                            <!--<Grid >
 
                                                 <Button HorizontalOptions="FillAndExpand" Text="Επιδιορθώθηκε" Background="#198754"  CornerRadius="5" ></Button>
                                                 
 
                                             </Grid>-->
-                                        </Grid>
+                                                        </Grid>
+                                                    </Grid>
+                                                    <!--<Grid Padding="10">
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="Auto" />
+                                                <ColumnDefinition Width="Auto" />
+                                            </Grid.ColumnDefinitions>
+                                            <Image Source="{Binding ImageUrl}" 
+                                           Aspect="AspectFill"
+                                           HeightRequest="120" 
+                                           WidthRequest="120" />
+                                            <Label Grid.Column="1"
+                                           Text="{Binding Details}"
+                                           FontAttributes="Italic" />
+                                        </Grid>-->
+                                                </DataTemplate>
+                                            </xct:Expander.ContentTemplate>
+                                        </xct:Expander>
+
+
+
+
+                                     
                                     </Grid>
 
 
                                 </Frame>
-                                <!--<Frame Margin="10" CornerRadius="5" 
-           HorizontalOptions="Fill" 
-           VerticalOptions="Center"
-           HasShadow="True"
-           IsClippedToBounds="True"
-           Padding="0">
-                            <Grid Padding="15" BackgroundColor="OrangeRed">
-                                <Grid.RowDefinitions>
-                                    <RowDefinition Height="10"/>
-                                    <RowDefinition Height="60"/>
-                                    <RowDefinition Height="60"/>
-                                </Grid.RowDefinitions>
-                                <Label Text="Location"></Label>
-                                <Grid  Grid.Row="1" >
-                                    <Image x:Name="backgroundImage" Source="{Binding Path=photoUrl}" AbsoluteLayout.LayoutBounds="0,0,1,1"   AbsoluteLayout.LayoutFlags="All" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Aspect="AspectFill"/>
-                                </Grid>
-                                <Grid Grid.Row="2">
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition/>
-                                        <ColumnDefinition/>
-                                    </Grid.ColumnDefinitions>
-                                    <Grid >
-                                        <hl:HyperlinkLabel x:Name="IsRepairedHyperlink"   Text="Φτιάχτηκε" ></hl:HyperlinkLabel>
 
-                                    </Grid>
-                                </Grid>
                             </Grid>
-                        </Frame>-->
-                            </Grid>
+
 
 
                         </DataTemplate>
