--- a/DestoPesto/DestoPesto/Views/ItemsPage.xaml
+++ b/DestoPesto/DestoPesto/Views/ItemsPage.xaml
@@ -18,18 +18,19 @@
 
             <RowDefinition Height="*" />
             
+            <RowDefinition Height="*" />
             <RowDefinition Height="10*" />
 
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="3*" />
-            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="10*" />
+            <ColumnDefinition Width="5*" />
         </Grid.ColumnDefinitions>
 
-        <Image   Grid.Column="0" Grid.Row="1"    Source="wifi.png" VerticalOptions="Start"></Image>
-        <Label Grid.Column="1" Grid.Row="1" Text="{x:Static resources:Properties.Resources.sendDataWifi}" TextColor="#0D6EFD" FontSize="Small" VerticalOptions="Start"/>
-        <Switch Grid.Column="2" Grid.Row="1" x:Name="toggle" VerticalOptions="Start" IsToggled="true" AnchorY="1"  HorizontalOptions="End" Toggled="Switch_Toggled" />
+        <Image   Grid.Column="0" Grid.Row="1"    Source="wifi.png" VerticalOptions="CenterAndExpand" HorizontalOptions="StartAndExpand"></Image>
+        <Label Grid.Column="1" Grid.Row="1" Text="{x:Static resources:Properties.Resources.sendDataWifi}" TextColor="#0D6EFD" FontSize="Medium" VerticalOptions="CenterAndExpand" HorizontalOptions="StartAndExpand"/>
+        <Switch Grid.Column="2" Grid.Row="1" x:Name="toggle" VerticalOptions="CenterAndExpand" IsToggled="true" AnchorY="1" WidthRequest="100" HeightRequest="70" HorizontalOptions="End" Toggled="Switch_Toggled" />
 
     </Grid>
 
