Work on login page

--- a/DestoPesto/DestoPesto/Views/LoginPage.xaml
+++ b/DestoPesto/DestoPesto/Views/LoginPage.xaml
@@ -13,101 +13,113 @@
         </OnPlatform>
     </ContentPage.Padding>
 
-    
-    
+
+
     <StackLayout BackgroundColor="white">
         <Grid>
             <!--<StackLayout Padding="0" HorizontalOptions="FillAndExpand">-->
-                <!--<Frame  BackgroundColor="White"   Padding="0" Margin="0">-->
+            <!--<Frame  BackgroundColor="White"   Padding="0" Margin="0">-->
 
-                    <StackLayout>
+            <StackLayout>
 
-                        <Image Source="{AppThemeBinding Light=login_header.png, Dark=login_header.png}"  />
+                <Image Source="{AppThemeBinding Light=login_header.png, Dark=login_header.png}"  />
 
-                        <!--<StackLayout Margin="0">
-                            --><!--<Label Text="Δες το Πες το" TextColor="#0D6EFD" HorizontalOptions="CenterAndExpand" FontAttributes="Bold" FontSize="Medium"/>--><!--
+                <!--<StackLayout Margin="0">
+                            -->
+                <!--<Label Text="Δες το Πες το" TextColor="#0D6EFD" HorizontalOptions="CenterAndExpand" FontAttributes="Bold" FontSize="Medium"/>-->
+                <!--
                             <Label Text="{x:Static resources:Properties.Resources.ApplicationName}" TextColor="#0D6EFD" HorizontalOptions="CenterAndExpand" FontAttributes="Bold" FontSize="Medium"/>
                         </StackLayout>-->
 
-                        <StackLayout Padding="0" Margin="15,10">
+                <StackLayout Padding="0" Margin="15,10">
 
-                            <Frame BackgroundColor="Transparent" BorderColor="DarkGray" Padding="0" HorizontalOptions="FillAndExpand" CornerRadius="6">
-                                <StackLayout Orientation="Horizontal">
-                                    <Frame BackgroundColor="Transparent" HeightRequest="40" WidthRequest="40" CornerRadius="6" Padding="0" Margin="5">
-                                        <Image Source="mail.png" Aspect="AspectFill" Margin="0"/>
-                                    </Frame>
-
-                                    <Entry Placeholder="{x:Static resources:Properties.Resources.EmailPlaceHolder}" x:Name="txtEmail" TextColor="Black" FontAttributes="None" HorizontalOptions="FillAndExpand" Margin="0,0,20,0"/>
-                                </StackLayout>
+                    <Frame BackgroundColor="Transparent" BorderColor="DarkGray" Padding="0" HorizontalOptions="FillAndExpand" CornerRadius="6">
+                        <StackLayout Orientation="Horizontal">
+                            <Frame BackgroundColor="Transparent" HeightRequest="40" WidthRequest="40" CornerRadius="6" Padding="0" Margin="5">
+                                <Image Source="mail.png" Aspect="AspectFill" Margin="0"/>
                             </Frame>
 
-                            <Frame BackgroundColor="Transparent" BorderColor="DarkGray" Margin="0,15,0,0" Padding="0" HorizontalOptions="FillAndExpand" CornerRadius="6">
-                                <StackLayout Orientation="Horizontal">
-                                    <Frame HeightRequest="40" WidthRequest="40" CornerRadius="6" Padding="0" Margin="5">
-                                        <Image Source="key.png" Aspect="AspectFill" Margin="0"/>
-                                    </Frame>
-
-                                    <Entry Placeholder="{x:Static resources:Properties.Resources.PasswordPlaceHolder}"  x:Name="txtPassword" PlaceholderColor="Gray"  IsPassword="True" TextColor="Black" FontAttributes="None" HorizontalOptions="FillAndExpand" Margin="0,0,20,0"/>
-                                </StackLayout>
-                            </Frame>
-
-                            <StackLayout  Orientation="Horizontal">
-
-                                <Label Text="{x:Static resources:Properties.Resources.ForgetPasswordText}"  TextColor="DarkGray" FontSize="Small" VerticalTextAlignment="Center" HorizontalTextAlignment="Center" />
-
-                            </StackLayout>
-
-                            <Button Text="{x:Static resources:Properties.Resources.SigninText}" x:Name="btnSignIn" Clicked="btnSignIn_Clicked" BackgroundColor="#0D6EFD" TextColor="White" CornerRadius="6" />
-                            <StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand">
-                                <Label Text="{x:Static resources:Properties.Resources.CreateAccountText}" TextColor="DarkGray" FontSize="Small"/>
-                                <Label Text="{x:Static resources:Properties.Resources.SignUpText}"  TextColor="#0D6EFD" x:Name="lblSignup"  FontAttributes="Bold" FontSize="Small"/>
-                            </StackLayout>
-
-                            <StackLayout Margin="0,25,0,0" Padding="0">
-                                <Grid>
-                                    <BoxView BackgroundColor="#828282" HeightRequest="1" WidthRequest="150"  HorizontalOptions="Center" VerticalOptions="Center"/>
-                                    <Frame BackgroundColor="White" HeightRequest="45" WidthRequest="45" CornerRadius="45" HasShadow="False" BorderColor="DarkGray" Margin="0" HorizontalOptions="Center" Padding="0">
-
-                                        <Label Text="{x:Static resources:Properties.Resources.seprationSimpleText}" TextColor="DarkGray" FontSize="Medium" VerticalTextAlignment="Center" HorizontalTextAlignment="Center"/>
-                                    </Frame>
-                                </Grid>
-                            </StackLayout>
-
-                            <StackLayout Margin="0,25" Orientation="Horizontal" HorizontalOptions="CenterAndExpand">
-                                <Grid>
-                                    <Grid.RowDefinitions>
-                                        <RowDefinition Height="Auto"></RowDefinition>
-                                        <RowDefinition Height="Auto"></RowDefinition>
-                                        <RowDefinition Height="Auto"></RowDefinition>
-                                    </Grid.RowDefinitions>
-                                    
-                                
-
-                                    <!--<Frame BackgroundColor="#1877F2" HeightRequest="42" WidthRequest="222" CornerRadius="6" HasShadow="False" BorderColor="DarkGray" Margin="0" HorizontalOptions="End" Padding="0">-->
-                                    <!--<Frame  CornerRadius="6" >-->
-                                        <Image Source="fb.png" Aspect="AspectFill" Margin="0" x:Name="fbSignin"/>
-                                    <!--</Frame>-->
-
-                                    <!--<Frame BackgroundColor="White" HeightRequest="42" WidthRequest="222" CornerRadius="6" HasShadow="False" BorderColor="DarkGray" Margin="0" HorizontalOptions="Center" Padding="0">-->
-                                    <!--<Frame Grid.Row="1" >-->
-                                        <Image Grid.Row="1" Source="google.png" Aspect="AspectFill" Margin="0" x:Name="gogleSignin"/>
-                                    <!--</Frame>-->
-                                    <!--<Frame BackgroundColor="White" HeightRequest="42" WidthRequest="222" CornerRadius="6" HasShadow="False" BorderColor="DarkGray" Margin="0" HorizontalOptions="Center" Padding="0">-->
-                                    <!--<Frame Grid.Row="2" >-->
-                                    <Image Grid.Row="2"  Source="apple.png" Aspect="AspectFill" Margin="0" x:Name="appleSignin"/>
-                                    <!--</Frame>-->
-                                </Grid>
-
-
-                            </StackLayout>
-                            <Image Source="logoback.png" HeightRequest="30" Margin="10,0,0,0" VerticalOptions="EndAndExpand"/>
-
+                            <Entry Placeholder="{x:Static resources:Properties.Resources.EmailPlaceHolder}" x:Name="txtEmail" TextColor="Black" FontAttributes="None" HorizontalOptions="FillAndExpand" Margin="0,0,20,0"/>
                         </StackLayout>
+                    </Frame>
 
+                    <Frame BackgroundColor="Transparent" BorderColor="DarkGray" Margin="0,15,0,0" Padding="0" HorizontalOptions="FillAndExpand" CornerRadius="6">
+                        <StackLayout Orientation="Horizontal">
+                            <Frame HeightRequest="40" WidthRequest="40" CornerRadius="6" Padding="0" Margin="5">
+                                <Image Source="key.png" Aspect="AspectFill" Margin="0"/>
+                            </Frame>
+
+                            <Entry Placeholder="{x:Static resources:Properties.Resources.PasswordPlaceHolder}"  x:Name="txtPassword" PlaceholderColor="Gray"  IsPassword="True" TextColor="Black" FontAttributes="None" HorizontalOptions="FillAndExpand" Margin="0,0,20,0"/>
+                        </StackLayout>
+                    </Frame>
+
+                    <StackLayout  Orientation="Horizontal">
+
+                        <Label Text="{x:Static resources:Properties.Resources.ForgetPasswordText}"  TextColor="DarkGray" FontSize="Small" VerticalTextAlignment="Center" HorizontalTextAlignment="Center" />
 
                     </StackLayout>
 
-                <!--</Frame>-->
+                    <Button Text="{x:Static resources:Properties.Resources.SigninText}" x:Name="btnSignIn" Clicked="btnSignIn_Clicked" BackgroundColor="#0D6EFD" TextColor="White" CornerRadius="6" />
+                    <StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand">
+                        <Label Text="{x:Static resources:Properties.Resources.CreateAccountText}" TextColor="DarkGray" FontSize="Small"/>
+                        <Label Text="{x:Static resources:Properties.Resources.SignUpText}"  TextColor="#0D6EFD" x:Name="lblSignup"  FontAttributes="Bold" FontSize="Small"/>
+                    </StackLayout>
+
+                    <StackLayout Margin="0,25,0,0" Padding="0">
+                        <Grid>
+                            <BoxView BackgroundColor="#828282" HeightRequest="1" WidthRequest="150"  HorizontalOptions="Center" VerticalOptions="Center"/>
+                            <Frame BackgroundColor="White" HeightRequest="45" WidthRequest="45" CornerRadius="45" HasShadow="False" BorderColor="DarkGray" Margin="0" HorizontalOptions="Center" Padding="0">
+
+                                <Label Text="{x:Static resources:Properties.Resources.seprationSimpleText}" TextColor="DarkGray" FontSize="Medium" VerticalTextAlignment="Center" HorizontalTextAlignment="Center"/>
+                            </Frame>
+                        </Grid>
+                    </StackLayout>
+
+                    <StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand">
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="*"></RowDefinition>
+                                <RowDefinition Height="*"></RowDefinition>
+                                <RowDefinition Height="*"></RowDefinition>
+                            </Grid.RowDefinitions>
+
+
+
+                            <!--<Frame BackgroundColor="#1877F2" HeightRequest="42" WidthRequest="222" CornerRadius="6" HasShadow="False" BorderColor="DarkGray" Margin="0" HorizontalOptions="End" Padding="0">-->
+                            <Frame  CornerRadius="10" >
+                                <StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand" x:Name="fbSignin" >
+                                    <Image Source="facebook.png" />
+                                    <Label Text="{x:Static resources:Properties.Resources.FacebookLogin}" TextColor="#3b5998" FontAttributes="Bold" VerticalOptions="CenterAndExpand" HorizontalOptions="StartAndExpand"/>
+                                </StackLayout>
+                            </Frame>
+
+                            <!--<Frame BackgroundColor="White" HeightRequest="42" WidthRequest="222" CornerRadius="6" HasShadow="False" BorderColor="DarkGray" Margin="0" HorizontalOptions="Center" Padding="0">-->
+                            <Frame Grid.Row="1" CornerRadius="10">
+                                <StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand" x:Name="gogleSignin" >
+                                    <Image Source="google_logo.png"  />
+                                    <Label Text="{x:Static resources:Properties.Resources.GoogleLogin}"  FontAttributes="Bold" VerticalOptions="CenterAndExpand" HorizontalOptions="StartAndExpand"/>
+                                </StackLayout>
+                                <!--<Button  Command="{Binding gogleSignin}" ContentLayout="Top,0" Text="mytext" ImageSource="google_logo.png" />-->
+                            </Frame>
+                            <!--<Frame BackgroundColor="White" HeightRequest="42" WidthRequest="222" CornerRadius="6" HasShadow="False" BorderColor="DarkGray" Margin="0" HorizontalOptions="Center" Padding="0">-->
+                            <Frame Grid.Row="2" CornerRadius="10">
+                                <StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand" x:Name="appleSignin" >
+                                    <Image Source="applelogo.png"  />
+                                    <Label Text="{x:Static resources:Properties.Resources.AppleLogin}"  FontAttributes="Bold"  VerticalOptions="CenterAndExpand" HorizontalOptions="StartAndExpand"/>
+                                </StackLayout>
+                            </Frame>
+                        </Grid>
+
+
+                    </StackLayout>
+                    <Image Source="logoback.png" HeightRequest="30" Margin="10,0,0,0" VerticalOptions="EndAndExpand"/>
+
+                </StackLayout>
+
+
+            </StackLayout>
+
+            <!--</Frame>-->
             <!--</StackLayout>-->
         </Grid>
     </StackLayout>
